@@ -4,7 +4,7 @@ Title: Goodness-of-fit functions for comparison of simulated and observed hydrol
 Version: 0.3-5-1
 Date: 2012-11-05
 Author: Mauricio Zambrano-Bigiarini [aut, cre]
-Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email = "mauricio.zambrano@ing.unitn.it", role=c("aut", "cre") ) )
+Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email = "mzb.devel@gmail.com", role=c("aut", "cre") ) )
 Maintainer: Mauricio Zambrano Bigiarini <mauricio.zambrano@ing.unitn.it>
 Description: S3 functions implementing both statistical and graphical goodness-of-fit measures between observed and simulated values, mainly oriented to be used during the calibration, validation, and application of hydrological models. Missing values in observed and/or simulated values can be removed before computations. Comments / questions / collaboration of any kind are very welcomed.
 License: GPL (>=2)
